arm64: imx_v8_defconfig: Enable CONFIG_GPIO_VF610
CONFIG_GPIO_VF610 is a very important driver for i.MX93.

Without this option many peripherals on the imx93-evk cannot work.

Select it so that imx93-evk can boot successfully.

Signed-off-by: Fabio Estevam <festevam@gmail.com>
(cherry picked from commit dd280fd310dd5fabbff7393175ee9d7a6aea6b34)

--- a/arch/arm64/configs/imx_v8_defconfig
+++ b/arch/arm64/configs/imx_v8_defconfig
@@ -478,6 +478,7 @@ CONFIG_GPIO_IMX_RPMSG=y
 CONFIG_GPIO_MB86S7X=y
 CONFIG_GPIO_MPC8XXX=y
 CONFIG_GPIO_MXC=y
+CONFIG_GPIO_VF610=y
 CONFIG_GPIO_PL061=y
 CONFIG_GPIO_WCD934X=m
 CONFIG_GPIO_XGENE=y
